--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,13 @@
 body{
-    background-color: blue;
+
+    background-image: url(../img/pillarsofcreation.jpg);
     font-family: "geologica", sans-serif;
 }
 
 header{
-    background-color: red;
+    background-color: rgb(55, 0, 255);
     padding: 3%;
+    
 }
 
 /*classe atribuida para a div que vai receber a logotipo*/
@@ -18,18 +20,18 @@ nav{
 }
 
 main{
-    background-color: rgba(255, 0, 0, 0.726);
+    
     width: 80%;
     margin-left: auto;
     margin-right: auto; 
 }
 
 section{
-    background-color: white;
+    color: white;
 }
 
 footer{
-    background-color: mediumslateblue;
+    background-color: rgb(3, 15, 189);
     padding: 3%;
 }
 
