--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,13 @@
 body{
+    
+    background-image: url(../img/060b7f2542bb2afb8bb71c04ad4e31f9.jpg);
+    background-repeat: no-repeat;
+    background-position: right top;
+    background-size: 100%;
+    margin: 0%;
 
-    background-image: url(../img/pillarsofcreation.jpg);
     font-family: "geologica", sans-serif;
+
 }
 
 header{
