--- a/CSS/style.css
+++ b/CSS/style.css
@@ -86,4 +86,24 @@ td,th{
     border: 5px dashed #f00;
     padding: 1.5%;
 }
+.linha{
+    display: flex;
+    flex-flow: row wrap;
+    margin-left: auto;
+    margin-right: auto;
+}
 
+.col-3{
+    width: 3%;
+}
+
+.col-3p{
+    font-size: 1rem;
+    text-align: center;
+}
+
+.imggaleria{
+    width: 90%;
+    margin-left: 1%;
+    margin-right: 1%;
+}
