--- a/CSS/style.css
+++ b/CSS/style.css
@@ -96,6 +96,8 @@ td,th{
 
 .col-3{
     width: 25%;
+    padding: 0 1%;
+    box-sizing: border-box;
 }
 
 .col-3p{
@@ -104,7 +106,7 @@ td,th{
 }
 
 .imggaleria{
-    width: 90%;
+    width: 100%;
     margin-left: 1%;
     margin-right: 1%;
 }
