--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 body{
     
-    background-image: url(../img/060b7f2542bb2afb8bb71c04ad4e31f9.jpg);
+    background-image: url(../img/pillarsofcreation.jpg);
     background-repeat: no-repeat;
     background-position: right top;
     background-size: 100%;
