--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,7 @@ body{
     background-position: right top;
     background-size: 100%;
     margin: 0%;
+    background-color: rgb(21, 123, 240);
 
     font-family: "geologica", sans-serif;
 
@@ -33,7 +34,7 @@ main{
 }
 
 section{
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
 }
 
 footer{
@@ -130,3 +131,8 @@ td,th{
 tr:nth-child(even) {
     background-color: blue;
 }
+
+img{
+    float: none;
+}
+
