--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,7 +7,7 @@ body{
     margin: 0%;
     background-color: rgb(21, 123, 240);
 
-    font-family: "geologica", sans-serif;
+    font-family: geological;
 
 }
 
@@ -19,11 +19,11 @@ header{
 
 /*classe atribuida para a div que vai receber a logotipo*/
 .logo{
-    background-color: rgb(0, 140, 255);
+    background-color: rgb(20, 88, 190);
 }
 
 nav{
-    background-color: rgb(0, 140, 255);
+    background-color: rgb(42, 89, 190);
 }
 
 main{
@@ -135,4 +135,6 @@ tr:nth-child(even) {
 img{
     float: none;
 }
+
+
 
