--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,11 @@ header{
     background-color: rgb(20, 88, 190);
 }
 
+.banner{
+    width: 100%;
+    height: 200px;
+}
+
 nav{
     background-color: rgb(42, 89, 190);
 }
@@ -215,6 +220,18 @@ img{
       width: 100%;
     }
     }
+div.relative{
+    position: relative;
+    left: 30px;
+    border: 3px solid;
+}
 
+div.fixed {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    width: 300px;
+    border: 3px solid #73AD21;
+  }
 
 
