--- a/css/style.css
+++ b/css/style.css
@@ -5,16 +5,17 @@ body{
     background-position: right top;
     background-size: 100%;
     margin: 0%;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(131, 112, 112);
     font-family: geological;
 
 }
 
 header{
-    background-color: rgb(0, 0, 0);
-    padding: 3%;
+    background-color: rgb(121, 108, 108);
+    
     
 }
+    /*padding: 3%;
 
 /*classe atribuida para a div que vai receber a logotipo*/
 .logo{
