--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,15 @@
 body{
-    
-    background-image: url(../img/pillarsofcreation.jpg);
-    background-repeat: no-repeat;
-    background-position: right top;
-    background-size: 100%;
-    margin: 0%;
-    background-color: rgb(131, 112, 112);
+    background-color: rgb(0, 0, 0);
     font-family: geological;
 
 }
 
 header{
-    background-color: rgb(121, 108, 108);
-    
+    background-color: rgb(0, 0, 0);
+    padding: 3%;
     
 }
-    /*padding: 3%;
+    
 
 /*classe atribuida para a div que vai receber a logotipo*/
 .logo{
@@ -28,7 +22,8 @@ header{
 }
 
 nav{
-    background-color: rgb(42, 89, 190);
+    background-color: rgb(39, 14, 67);
+    text-align: center;
 }
 
 main{
@@ -43,7 +38,7 @@ section{
 }
 
 footer{
-    background-color: rgb(19, 107, 207);
+    background-color: rgb(207, 19, 141);
     padding: 3%;
 }
 
