--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,10 @@ section{
 }
 
 footer{
-    background-color: rgb(207, 19, 141);
-    padding: 3%;
+    background-color: rgb(39, 14, 67);
+    text-align: center;
 }
+
 
 .cabecalho{
     padding: 3%;
@@ -211,7 +212,7 @@ img{
   .col-12 {width: 100%;}
   
   @media only screen and (max-width: 768px) {
-    /* For mobile phones: */
+    
     [class*="col-"] {
       width: 100%;
     }
@@ -228,6 +229,112 @@ div.fixed {
     right: 0;
     width: 300px;
     border: 3px solid #73AD21;
+  }
+
+  
+body {
+    font-size: 16px;
+  }
+  
+  @media (max-width: 768px) {
+    
+    body {
+      font-size: 14px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    
+    body {
+      font-size: 12px;
+    }
+  }
+
+  .container {
+    width: 100%;
+    padding: 1em;
+  }
+
+  
+.container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .item {
+    flex: 1 1 200px; 
+  }
+  
+  
+  .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 1em;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+
+  body {
+    font-size: 1rem; 
+  }
+  
+  h1 {
+    font-size: 2.5rem; 
+  }
+
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  
+  header {
+    background-color: #000000;
+    color: rgb(0, 0, 0);
+    padding: 1em 0;
+  }
+  
+  .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 1em;
+  }
+  
+  .logo {
+    font-size: 1.5em;
+  }
+  
+  .nav-links {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .nav-links li {
+    margin-left: 2em;
+  }
+  
+  .nav-links a {
+    color: white;
+    text-decoration: none;
+    font-size: 1em;
+  }
+  
+  .menu-toggle {
+    display: none;
+  }
+  
+  .menu-icon {
+    display: none;
+    cursor: pointer;
+    font-size: 2em;
   }
 
   
