--- a/css/style.css
+++ b/css/style.css
@@ -337,15 +337,15 @@ body {
     font-size: 2em;
   }
 
-  {
-    font-family: Arial, sans-serif;
+  /*{
+    font-family: Arial; sans-serif;
     margin: 0;
     padding: 0;
     scroll-behavior: smooth; /* Rolagem suave */
-  }
+  
 
 nav {
-    background-color: #333;
+    background-color: rgb(39, 14, 67);
     color: #fff;
     padding: 10px;
     position: fixed; /* Fixa o menu no topo */
@@ -379,6 +379,11 @@ section {
   margin-top: 50px; /* Espaçamento adicional para o conteúdo abaixo do menu fixo */
 }
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
 
 
   
